--- a/index.html
+++ b/index.html
@@ -3,8 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Profile Web</title>
+    <title>Profile Website</title>
     <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Poppins"
+    />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
@@ -37,6 +41,59 @@
       <button class="visit-btn">Visit Github</button>
     </header>
 
+    <section id="about" class="about">
+      <div class="about-container">
+        <img src="image.jpg" alt="" />
+
+        <div class="info-box">
+          <div class="text">
+            <h3>Hi, I'm</h3>
+            <h1>Nikolaus Nathaniel</h1>
+            <span>College Student</span>
+          </div>
+
+          <div class="btn-group">
+            <div class="btn">Download CV</div>
+            <div class="btn">Contact</div>
+          </div>
+
+          <div class="socials">
+            <i class="fa-brands fa-github"></i>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section id="experience" class="experience">
+      <h2 class="section-title">Experience</h2>
+
+      <div class="experience-info">
+        <div class="grid">
+          <div class="grid-card">
+            <span>Marketing Internship</span>
+            <p>
+              <br />Promoting Tarumanagara University to high school students
+            </p>
+          </div>
+          <div class="grid-card">
+            <span>Middle School Student Council</span>
+            <p>
+              <br />- Assist the student council president in running his task
+            </p>
+            <p>
+              <br />- Replace the student council leader if he is unable to
+              attend
+            </p>
+          </div>
+          <div class="grid-card">
+            <span>High School Volunteer Yearbook</span>
+            <p>
+              <br />Helping the committee organize property for photos Yearbook
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
     <script src="script.js"></script>
   </body>
 </html>
