--- a/index.html
+++ b/index.html
@@ -94,6 +94,55 @@
         </div>
       </div>
     </section>
+
+    <section id="projects" class="projects">
+      <h2 class="section-title">Recent Projects</h2>
+      <div class="projects-grid">
+        <div class="project-card">
+          <img src="project-1.png" alt="" />
+          <h3>Game Forum Discussion</h3>
+          <p>Second semester final group project</p>
+          <div class="btn-group">
+            <div class="btn">Github Repository</div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="contact" id="contact">
+      <div class="input-box">
+        <h2 class="section-title">Contact Me</h2>
+
+        <div class="contact-info">
+          <p><i class="fa-solid fa-phone"></i> +62 813-1134-5762</p>
+          <p>
+            <i class="fa-regular fa-envelope"></i> nikolauscontact@gmail.com
+          </p>
+        </div>
+      </div>
+    </section>
+
+    <footer>
+      <ul>
+        <li>
+          <a href="#about">About</a>
+        </li>
+
+        <li>
+          <a href="#experience">Experience</a>
+        </li>
+
+        <li>
+          <a href="#projects">Projects</a>
+        </li>
+
+        <li>
+          <a href="#contact">Contact</a>
+        </li>
+      </ul>
+
+      <p class="copyright">&copy Copyright</p>
+    </footer>
     <script src="script.js"></script>
   </body>
 </html>
