--- a/index.html
+++ b/index.html
@@ -38,7 +38,9 @@
 
       <i class="fa-solid fa-bars" id="menu-icon"></i>
 
-      <button class="visit-btn">Visit Github</button>
+      <a href="https://github.com/NikNthl" target="_blank">
+        <button class="visit-btn">Visit Github</button>
+      </a>
     </header>
 
     <section id="about" class="about">
@@ -47,18 +49,14 @@
 
         <div class="info-box">
           <div class="text">
-            <h3>Hi, I'm</h3>
             <h1>Nikolaus Nathaniel</h1>
             <span>College Student</span>
           </div>
 
-          <div class="btn-group">
-            <div class="btn">Download CV</div>
-            <div class="btn">Contact</div>
-          </div>
-
           <div class="socials">
-            <i class="fa-brands fa-github"></i>
+            <a href="https://github.com/NikNthl" target="_blank">
+              <i class="fa-brands fa-github"></i>
+            </a>
           </div>
         </div>
       </div>
@@ -103,7 +101,9 @@
           <h3>Game Forum Discussion</h3>
           <p>Second semester final group project</p>
           <div class="btn-group">
-            <div class="btn">Github Repository</div>
+            <a href="https://github.com/NikNthl/Forum-Game" target="_blank">
+              <div class="btn">Github Repository</div>
+            </a>
           </div>
         </div>
       </div>
