--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
         <div class="info-box">
           <div class="text">
             <h1>Nikolaus Nathaniel</h1>
+            <h1>Tarumanagara University</h1>
             <span>College Student</span>
           </div>
 
